3/8/12 hook up experimental data to absorbance model
3/8/12 clean up concentration value view transform
3/8/12 add JC's experimental data to lookup tables for mapping wavelength to molar absorptivity
# 0.00.18 (62340) Mar 8, 2012
3/8/12 Concentration 1.00 release candidate
3/8/12 change "lambdaMax" label to "fixed" on wavelength radio button
3/8/12 format Color Scheme Editor output so that it can be directly pasted back into Java code
3/8/12 convert JC's spreadsheet to something that can be used by Java (CSV format, swap rows and columns)
3/7/12 add workaround for #3267, problem with wavelength slider
3/7/12 BeersLawSolution: doc, eliminate duplication of colors, convert colors from hex to RGB
3/7/12 eliminate duplication of saturated concentration values
3/7/12 reduce width of concentration text field
3/7/12 render ruler after Reset All button, so that Reset All button doesn't get obscured
3/7/12 move model-view location debugger to upper-right
3/7/12 simplify wavelength control, replace enum with boolean
3/7/12 when lambdaMax radio button is selected, set light wavelength to current solution's lambdaMax
3/7/12 Beers: rename "solid beam" to "beam" throughout, since there's only one representation now
3/7/12 Beers: delete "photon view" feature, representation can't handle the range [62302],[62303],[62311]
# 0.00.17 (62294) Mar 7, 2012
3/7/12 Concentration: new color scheme from JC
3/7/12 restore wavelength control
3/7/12 cleanup uses of ChangeObserver (used mainly to rewire view components to mutable model properties)
# 0.00.16 (62265) Mar 6, 2012
3/6/12 dev version with Color Scheme Editor
3/6/12 update view when color scheme changes (everything except precipitate that already exists)
3/6/12 user interface completed for color scheme editor (not everything is updating properly yet, since colors were never intended to be mutable)
3/6/12 Concentration: add color schemes to model, stub button for opening editor